Update about me

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                         driven by curiosity about how technology can solve real-world problems and improve people's lives.
                     </p>
                     <p>
+                        I have always been fascinated by electronics and have an insatiable need to understand how things work.
+                        Whenever I come across an interesting device, I can't help but stop and inspect it. And that which I 
+                        can break open I do, to learn about the electronics inside.
+                    <p>
                         I'm particularly interested in the intersection of hardware and software, focusing on developing
                         systems that bridge the digital and physical worlds. I'm actively seeking my first co-op
                         opportunity in automation, robotics, or embedded systems where I can apply my skills to create
