Update resume and about me

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
                         <span class="greeting">— I'M KALOYAN (KAL) DRAGANOV.</span>
                         <h1 class="hero-title">ROBOTICS ENGINEER</h1>
                         <p class="hero-description">
-                            I'm a second-year Computer Engineering and Computer Science student at Northeastern University
-                            passionate about robotics, embedded systems, and automation. I'm seeking opportunities to
-                            turn innovative ideas into real-world prototypes and products.
+                            CE + CS @ Northeastern. I build at the hardware–software edge: working in embedded systems,  avionics, and robotics. Ex-Dynamo Software developer, founder of Uru Intelligence. Seeking job opportunities involving prototyping and design.
                         </p>
                         <div class="hero-buttons">
                             <a href="#resume" class="btn-primary">
@@ -81,27 +79,35 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        I'm a second-year Computer Engineering and Computer Science student at Northeastern University
-                        with a passion for robotics, embedded systems, and automation. My academic journey has been
-                        driven by curiosity about how technology can solve real-world problems and improve people's lives.
+                        My name is Kaloyan Draganov. I'm a Computer Engineering and Computer Science major at Northeastern University, passionate about embedded systems, robotics, and machine learning—and endlessly curious about electronics.
                     </p>
                     <p>
-                        I'm particularly interested in the intersection of hardware and software, focusing on developing
-                        systems that bridge the digital and physical worlds. I'm actively seeking my first co-op
-                        opportunity in automation, robotics, or embedded systems where I can apply my skills to create
-                        meaningful prototypes and products.
+                        I'm looking for hands-on experience with prototyping and design, where I can take ideas from concept to working hardware and software.
+                    </p>
+                    <p>
+                        I have experience in embedded C++ (I2C, SPI, CAN) along with electrical circuit design and schematic capture working in avionics. I'm also experienced in robotics, knowledgeable about ROS, kinematics, computer vision, and SLAM.
+                    </p>
+                    <p>
+                        I also have significant experience in software development: 2 years as a Developer at Dynamo Software (Python, REST APIs, .NET C#, SQL). In March, I founded Uru Intelligence, a SaaS that connects popular LLMs (e.g., ChatGPT, Claude) with third-party apps like Gmail, Calendar, Slack, and Jira, using Docker, React, FastAPI, Supabase, and modern RAG/MCP workflows. I also spent 4 years programming in FIRST Robotics (Java).
                     </p>
                     <div class="skills">
                         <h3>Technical Skills</h3>
                         <div class="skills-grid">
                             <span class="skill-tag">Python</span>
-                            <span class="skill-tag">C++</span>
+                            <span class="skill-tag">Embedded C++</span>
                             <span class="skill-tag">Java</span>
                             <span class="skill-tag">ROS</span>
-                            <span class="skill-tag">MATLAB</span>
+                            <span class="skill-tag">Docker</span>
+                            <span class="skill-tag">React</span>
+                            <span class="skill-tag">.NET C#</span>
                             <span class="skill-tag">Linux</span>
-                            <span class="skill-tag">FPGAs</span>
+                            <span class="skill-tag">FPGA</span>
+                            <span class="skill-tag">I2C</span>
+                            <span class="skill-tag">SPI</span>
+                            <span class="skill-tag">CAN</span>
+                            <span class="skill-tag">SLAM</span>
                             <span class="skill-tag">SOLIDWORKS</span>
+                            <span class="skill-tag">MATLAB</span>
                         </div>
                     </div>
                 </div>
@@ -151,8 +157,8 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <p class="contact-description">
-                        I'm actively seeking my first co-op opportunity in robotics, automation, or embedded systems.
-                        Reach out if you'd like to discuss opportunities, projects, or just connect!
+                        I'm looking for hands-on prototyping and design opportunities in robotics, embedded systems, and automation.
+                        Reach out if you'd like to collaborate, discuss opportunities, or just connect!
                     </p>
                     <!-- <div class="contact-methods">
                         <a href="mailto:kaloyan@draganov.com" class="contact-method">
